<resources>
    <string name="app_name">Software-Engineering-Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="user_name_title">User Name:</string>
    <string name="password">Password:</string>
    <string name="password_et">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="email_address_ro">email@address.ro</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="confirm_password_et">Confirm Password</string>
    <string name="your_registration_was_successful">Your registration was successful!</string>
    <string name="please_login">Please login</string>
    <string name="total_amount">Total amount:</string>
    <string name="_0_lei">0 lei</string>
    <string name="split_bills">Split bills</string>
    <string name="choose_type">Choose Type</string>
    <string name="choose_an_existing_item_or_create_your_own">Choose an existing item or create your own</string>
    <string name="new_item">New Item</string>
    <string name="price">Price</string>
    <string name="count">Count</string>
    <string name="ok">OK</string>
    <string name="item_name">Item name</string>
    <string name="create_a_new_item">Create a new item!</string>
    <string name="add_a_photo_as_well">Add a photo as well</string>
    <string name="create">Create</string>
    <string name="your_part">Your part:</string>
    <string name="back">Back</string>
</resources>