<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.RegisterFragment">

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/register"
        android:textColor="@color/textColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user_name_title"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle" />

    <EditText
        android:id="@+id/etUserNameRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/user_name"
        android:padding="4dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserNameRegister" />

    <TextView
        android:id="@+id/tvEmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserNameRegister" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/email_address_ro"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailRegister" />

    <TextView
        android:id="@+id/tvPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailRegister" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/password_et"
        android:padding="4dp"
        android:password="true"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordRegister" />

    <TextView
        android:id="@+id/tvPasswordConfirmationRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_password"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" />

    <EditText
        android:id="@+id/etPasswordConfirmationRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/confirm_password_et"
        android:inputType="textPassword"
        android:padding="4dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordConfirmationRegister" />

    <RelativeLayout
        android:id="@+id/rlRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_border_style"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordConfirmationRegister">

        <ImageView
            android:id="@+id/ivRegisterPortrait"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnRegisterRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>